<resources>
    <string name="app_name">Helping Frog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">add task</string>
    <string name="author_name">Author name</string>
    <string name="importance">Importance</string>
    <string name="task">Task</string>
    <string name="add">add</string>
    <string name="redact_task">redact task</string>
    <string name="accept">accept</string>
    <string name="title">title</string>
    <string name="welcome_to_helpingfrog">Welcome to HelpingFrog!</string>
    <string name="app_description">Our application will help you to start your volunteer journey and turn it into an exciting game! Complete tasks and get unique NFTs created by you as a reward!!</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm">confirm</string>
    <string name="sign_up">sign up</string>
    <string name="auth">wrong login or password type!</string>
    <string name="or">or</string>
    <string name="login_name">Login_name</string>
    <string name="choose_image">choose image</string>
    <string name="my_nfts">My NFTs:</string>
    <string name="congrats">Successful authorization!!</string>
    <string name="register">register</string>
    <string name="tasks">Tasks</string>
    <string name="dsmrnvv">Dsmrnvv</string>
</resources>