<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    tools:context="fragment.ChangeTaskFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:text="@string/redact_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:gravity="center"
        android:background="@color/main_color"
        android:padding="6dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="12dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/importance"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="12dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bck"
        android:layout_margin="12dp"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>