<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_authorization"
    android:background="@color/main_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:background="@drawable/welcome_back"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:padding="12dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="25sp"
                android:layout_gravity="center"/>


            <EditText
                android:id="@+id/auth_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_bck_white"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:hint="@string/login"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_bck_white"
                android:gravity="center"
                android:hint="@string/password"
                android:padding="12dp"
                android:fontFamily="@font/montserrat_alternates"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:fontFamily="@font/montserrat_alternates"
                android:layout_margin="10dp"
                android:id="@+id/btn_confirm_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/btn_bck"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:padding="20dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="30sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:padding="12dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="25sp"
                android:layout_gravity="center"/>


            <EditText
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_bck_white"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:hint="@string/login"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_bck_white"
                android:gravity="center"
                android:hint="@string/password"
                android:padding="12dp"
                android:fontFamily="@font/montserrat_alternates"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:fontFamily="@font/montserrat_alternates"
                android:layout_margin="10dp"
                android:id="@+id/btn_confirm_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/btn_bck"
                />





        </LinearLayout>



    </LinearLayout>



</FrameLayout>