<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_profile"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/deepestOceanMist"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:background="@color/deepestOceanMist"/>

            <Button
                android:id="@+id/btn_set_user_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_image"
                android:fontFamily="@font/montserrat_alternates_bold"
                />

            <TextView
                tools:listitem="@layout/rv_item_for_nft"
                android:id="@+id/user_name"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_alternates_semibold"
                android:text="@string/login_name"
                android:background="@drawable/info_bck"
                />

            <TextView
                android:id="@+id/total_u_hours"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="total hours"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:background="@drawable/info_bck"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_nfts"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:background="@drawable/info_bck"
                android:fontFamily="@font/montserrat_alternates"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_nft"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:padding="12dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />


        </LinearLayout>


    </LinearLayout>




</FrameLayout>